Mon Jun 21 05:33:15 1999  Mumit Khan  <khan@xraylith.wisc.edu>

	* i386/winnt.c (exports_head): New static variable.
	(i386_pe_record_exported_symbol): New function.
	(i386_pe_asm_file_end): Use.
	* i386/cygwin.h (ASM_OUTPUT_COMMON): Record the exported
	symbols to be emitted at end of assembly.
	(ASM_DECLARE_OBJECT_NAME): Likewise.
	(ASM_DECLARE_FUNCTION_NAME): Likewise.

	* i386/uwin.h (CPP_SPEC): Use -idirafter instead -iprefix and
	-iwithprefix.

Mon Jun 21 05:17:00 1999  David Edelsohn  <edelsohn@gnu.org>

	* rs6000.md (movdf_hardfloat32): Use worst case insn length
	attributes for cases 1 and 2.

	* rs6000.c (find_addr_reg): New function.
	* rs6000.h (find_addr_reg): Declare.
	(offsettable_addr_operand): Delete.
	* rs6000.md (movdf_hardfloat32): Handle non-offsettable loads
	from and stores to GPRs.

Mon Jun 21 04:44:31 1999  Jeffrey A Law  (law@cygnus.com)

	* sparc.h (LEGITIMIZE_RELOAD_ADDRESS): Fix paren error introduced
	in last change.

Sun Jun 20 17:24:35 1999  Richard Henderson  <rth@cygnus.com>

	* haifa-sched.c (sched_analyze): Don't clear reg_last_uses on calls.

Sat Jun 19 22:52:55 1999  Richard Henderson  <rth@cygnus.com>

	* haifa-sched.c (sched_analyze): Mark call-user regs as clobbered
	instead of set.

Sat Jun 19 05:40:07 1999  Philip Blundell <pb@nexus.co.uk>

	* arm.c (arm_reload_in_hi): Invert sense of test on BYTES_BIG_ENDIAN.

Sat Jun 19 05:25:05 1999  Richard Earnshaw (rearnsha@arm.com)

	* arm.h (CONDITIONAL_REGISTER_USAGE): If flag_pic, never use
	PIC_OFFSET_TABLE_REGNUM for general alloaction.
	(INITIAL_ELIMINATION_OFFSET): Count the fact that the PIC register
	must be stacked if it is used for PIC accesses.
	* arm.c (use_return_insn): Handle PIC register specially.
	(output_return_instruction): Likewise.
	(output_func_{prologue,epilogue}): Likewise.
	(output_expand_prologue): Likewise.

	* arm.c (arm_override_options): Remove warning about PIC code
	not being supported.

Fri Jun 18 15:44:18 1999  Richard Henderson  <rth@cygnus.com>
